<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.gaminggilde</groupId>
    <artifactId>BetterRTP</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>BetterRTP</name>
    <description>Random teleportation for modern Paper and Folia servers.</description>
    <url>https://github.com/GAMINGGILDE/BetterRTP</url>

    <developers>
        <developer><name>SuperRonanCraft</name></developer>
        <developer><name>Christian F</name><url>https://github.com/CFPlusPlus</url></developer>
    </developers>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <paper.version>26.1.2.build.74-stable</paper.version>
        <lombok.version>1.18.46</lombok.version>
        <junit.version>6.0.3</junit.version>
        <sqlite-jdbc.version>3.53.2.0</sqlite-jdbc.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.outputTimestamp>2026-01-01T00:00:00Z</project.build.outputTimestamp>
    </properties>

    <repositories>
        <repository><id>papermc</id><url>https://repo.papermc.io/repository/maven-public/</url></repository>
        <repository><id>jitpack.io</id><url>https://jitpack.io</url></repository>
        <repository><id>vault-repo</id><url>https://nexus.hc.to/content/repositories/pub_releases</url></repository>
        <repository><id>enginehub</id><url>https://maven.enginehub.org/repo/</url></repository>
        <repository><id>placeholderapi</id><url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url></repository>
    </repositories>

    <dependencies>
        <dependency><groupId>io.papermc.paper</groupId><artifactId>paper-api</artifactId><version>${paper.version}</version><scope>provided</scope></dependency>
        <dependency><groupId>net.milkbowl.vault</groupId><artifactId>VaultAPI</artifactId><version>1.7</version><scope>provided</scope></dependency>
        <dependency><groupId>com.sk89q.worldguard</groupId><artifactId>worldguard-bukkit</artifactId><version>7.0.17</version><scope>provided</scope></dependency>
        <dependency><groupId>com.github.angeschossen</groupId><artifactId>LandsAPI</artifactId><version>7.25.4</version><scope>provided</scope></dependency>
        <dependency><groupId>com.github.TownyAdvanced</groupId><artifactId>Towny</artifactId><version>0.102.0.13</version><scope>provided</scope></dependency>
        <dependency><groupId>com.github.TechFortress</groupId><artifactId>GriefPrevention</artifactId><version>18.0.0</version><scope>provided</scope></dependency>
        <dependency><groupId>me.clip</groupId><artifactId>placeholderapi</artifactId><version>2.12.3</version><scope>provided</scope></dependency>
        <dependency><groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.13.2</version><scope>provided</scope></dependency>
        <dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>${lombok.version}</version><scope>provided</scope></dependency>
        <dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter</artifactId><version>${junit.version}</version><scope>test</scope></dependency>
        <dependency><groupId>org.xerial</groupId><artifactId>sqlite-jdbc</artifactId><version>${sqlite-jdbc.version}</version><scope>test</scope></dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <resources><resource><directory>src/main/resources</directory><filtering>true</filtering></resource></resources>
        <pluginManagement>
            <plugins>
                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-clean-plugin</artifactId><version>3.5.0</version></plugin>
                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId><version>3.5.0</version></plugin>
                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId><version>3.5.0</version></plugin>
                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-help-plugin</artifactId><version>3.5.1</version></plugin>
                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-install-plugin</artifactId><version>3.1.4</version></plugin>
                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-deploy-plugin</artifactId><version>3.1.4</version></plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-enforcer-plugin</artifactId><version>3.6.3</version>
                <executions><execution><id>build-werkzeuge-pruefen</id><goals><goal>enforce</goal></goals><configuration><rules>
                    <requireMavenVersion><version>[3.9.15,4.0.0)</version></requireMavenVersion>
                    <requireJavaVersion><version>[25,26)</version></requireJavaVersion>
                </rules></configuration></execution></executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.14.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <annotationProcessorPaths><path><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>${lombok.version}</version></path></annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-shade-plugin</artifactId><version>3.6.2</version>
                <executions><execution><phase>package</phase><goals><goal>shade</goal></goals></execution></executions>
                <configuration>
                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>3.5.4</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile><id>dev</id><build><plugins><plugin>
            <groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId><version>3.4.2</version>
            <configuration><outputDirectory>../../Java/plugins</outputDirectory></configuration>
        </plugin></plugins></build></profile>
    </profiles>
</project>
